syntax = "proto3";

package yolo_service;

message Empty {
  // Represents an empty request or response.
}

message ImageFrame {
  bytes image_data = 1;
  int64 timestamp = 2;
}

message BoundingBox {
  float x1 = 1;
  float y1 = 2;
  float x2 = 3;
  float y2 = 4;
  int32 class_id = 5;
  float confidence = 6;
}

message PredictionBatch {
  repeated BoundingBox detections = 1;
  int64 timestamp = 2;
}

message ColorLabel {
  string label = 1;
  uint32 red = 2;
  uint32 green = 3;
  uint32 blue = 4;
}

message YoloClassLabels {
  repeated ColorLabel class_labels = 1;
}

service YoloService {
  rpc Predict (ImageFrame) returns (PredictionBatch);
  rpc GetYoloClassLabels (Empty) returns (YoloClassLabels);
}
